ppx_view/test/errors/or_pattern_vars_order.ml
let f x =
  match%view x with
  | Pair (x, y)
  | Record {fst = y; snd = x} -> x - y
